# linebot-web

./: .env.example  .gitignore  AVATAR_DEPLOYMENT_GUIDE.md  AVATAR_FEATURE_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile.postgresql-pgvector  EMAIL_VERIFICATION_IMPLEMENTATION.md  ENV_CONFIGURATION_REPORT.md  LICENSE  LineBot-Web_Backend_API_完整文檔.md  LineBot-Web_Backend_API_架構分析.md  Makefile  Project_layout.md  README-Docker-Setup.md  README.md  daemon.json  database_avatar_migration.sql  docker-compose.local.yml  docker-compose.postgresql-replica.yml  docker-compose.yml  index.html  package-lock.json  tailwind.config.ts  unified_api_integration_prompt.md  vite.config.ts  專題初審.txt  後端重構計劃_統一API架構.md
backend/: .dockerignore  .env.example  .gitignore  DATABASE_GUIDE.md  DATABASE_SETUP.md  Dockerfile  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  WEBHOOK_SETUP.md  alembic.ini  alembic_migration_add_indexes.py  auth_service.py  check_embeddings.py  db.py  db_manager.py  debug_models.py  env.example  fix_migration.py  manage_db.py  minimal_test.py  process_existing_media.py  pyproject.toml  query_mongodb.py  quick_start.py  quick_test.py  requirements.txt  run.py  test_imports.py  test_media_processing.py  test_user_recording.py  test_webhook.py  update_media_info.py
backend/LINEloginAPI/: .env.example  Dockerfile  LINEloginAPI_Guide.md  app.py  auth_service.py  note.txt  requirements.txt  t.py  運作流程.md
backend/SettingAPI/: Dockerfile  README.md  app.py  requirements.txt
backend/app/: __init__.py  config.py  database.py  database_async.py  database_mongo.py  db_context.py  db_read_write_split.py  db_session_context.py  dependencies.py  main.py  schema_config.py
backend/app/api/: __init__.py  dependencies.py
backend/app/config/: __init__.py  logging_config.py  redis_config.py
backend/app/core/: __init__.py  security.py
backend/app/database_enhanced/: __init__.py  init.py
backend/app/middleware/: __init__.py  token_refresh.py
backend/app/models/: __init__.py  bot.py  knowledge.py  line_user.py  user.py
backend/app/schemas/: __init__.py  ai.py  auth.py  (+4 more)
backend/docs/: READ_WRITE_SPLITTING.md  READ_WRITE_SPLITTING_IMPLEMENTATION.md  intent_classification_flow.md  note.md
backend/loginAPI/: Dockerfile  Login_API_Guide.md  app.py  auth_service.py  requirements (1).txt  requirements.txt
backend/migrations/: env.py
backend/puzzleAPI/: .env  Dockerfile  Puzzle_API_Guide.md  app.py  auth_service.py  index.js  instruction.md  package-lock.json  package.json  requirements.txt
backend/scripts/: cleanup_postgresql_tables.py  db_schema_generator.py  manage_db.py  migrate_conversations_to_mongo.py  pdf_diagnostic.py  performance_monitor.py  start.py  test_read_write_split.py  test_schema_cleanup.py
backend/tests/: conftest.py  test_main.py
(+530 files in other folders)
